@@ -3,6 +3,7 @@
 	* Follow-up to feature #9654: Integrate return value depending on a found includeLibs configuration
 	* Fixed bug #9747: Update function names of caching API to be consistent with FLOW3
 	* Cleanup: Updated NEWS.txt
+	* Added feature #9778: Improvement of removeXSS (thanks to Steffen Kamper, David Slayback)
 
 2008-11-11  Steffen Kamper  <info@sk-typo3.de>
 
